# rapp_fake_robot

./: CMakeLists.txt  README.md  package.xml
launch/: rapp_fake_robot.launch
scripts/: fake_nao_comm.py  fake_nao_wrapper.py  record.sh  say.sh  speech.sh  test.py
srv/: SpeechRecognitionSphinx4Srv.srv
